# mini2

./: .gitignore  CMakeLists.txt  README.md  build-proto.sh  requirements.txt
config/: configFile.json
include/: NodeClient.hpp  NodeServer.hpp  Stopwatch.hpp  WorldDataParser.hpp  config.hpp  ipcLoop.hpp  jobs.hpp  task.hpp
python/: python_client.py
python/stubs/: route_pb2.py  route_pb2_grpc.py
resources/: route.proto
src/: WorldDataParser.cc  ipcLoop.cc  jobs.cc  main_client.cc  main_server.cc
